--- a/thanks.html
+++ b/thanks.html
@@ -2,11 +2,11 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Спасибо за заказ</title>
+  <title>Thank you for your order!</title>
 </head>
 <body>
-  <h1>Спасибо!</h1>
-  <p>Мы получили ваш заказ и скоро с вами свяжемся.</p>
-  <a href="index.html">Вернуться на сайт</a>
+  <h1>Thank you!</h1>
+  <p>We have received your order and will contact you soon.</p>
+  <a href="index.html">Return to the website</a>
 </body>
 </html>
